--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/SpoonAndBirdcage/meanstack-tree#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "angular": "^1.5.8",
+    "body-parser": "1.15.2",
+    "express": "^4.14.0",
+    "mongoose": "4.6.6"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.3"
   }
 }
